[Blocks] Fix layout issues when field has width

--- a/packages/blocks/components/block-edit/style.scss
+++ b/packages/blocks/components/block-edit/style.scss
@@ -5,4 +5,8 @@
 .cf-block__fields {
 	display: flex;
 	flex-wrap: wrap;
+
+	.wp-block & {
+		margin: $size-base * -2;
+	}
 }
